# BestBetWC

./: .env.example  .gitignore  AGENTS.md  README.md  SPEC.md  pyproject.toml
data/raw/: world_cup_2014.csv  world_cup_2018.csv  world_cup_2022.csv  world_cup_micro_2022.csv  world_cup_test_2022.csv
specs/: README.md  SPEC-001-project-setup.md  SPEC-002-database-layer.md  SPEC-003-dixon-coles-model.md  SPEC-004-expected-score-calculator.md  SPEC-005-strategy-selector.md  SPEC-006-odds-api-etl.md  SPEC-007-api-football-etl.md  SPEC-008-data-pipeline.md  SPEC-009-gradient-boost-model.md  SPEC-010-model-ensemble.md  SPEC-011-polla-scraper.md  SPEC-012-game-theory.md  SPEC-013-bracket-optimizer.md  SPEC-014-monte-carlo-simulator.md  SPEC-015-backtesting.md  SPEC-016-cli-interface.md  SPEC-017-fastapi-backend.md  SPEC-018-web-ui.md  SPEC-019-ux-simplificada.md
src/: config.py
src/api/: __init__.py  app.py  dependencies.py  schemas.py
src/cli/: main.py
src/database/: connection.py  models.py
src/etl/: api_football.py  fbref.py  odds_api.py  polla_scraper.py
src/features/: __init__.py  context.py  market.py  performance.py  pipeline.py
src/game_theory/: __init__.py  (+3 more)
tests/: test_api.py  test_api_football.py  test_backtesting.py  test_bracket.py  test_config.py  test_data_pipeline.py  test_database.py  test_dixon_coles.py  test_ensemble.py  test_expected_score.py  test_game_theory.py  test_gradient_boost.py  test_monte_carlo.py  test_odds_api.py  test_participant_simulation.py  test_polla_scraper.py  test_strategy.py  test_tournament_simulation.py  test_web_ui.py
(+50 files in other folders)
